# pepper_smartfarm_plan_v2

./: .env.dev.example  .env.example  .env.prod.example  .env.staging.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  AI_MLOPS_PLAN.md  CHANGELOG.md  EXPERT_AI_AGENT_PLAN.md  PLAN.md  PROJECT_STATUS.md  README.md  WORK_LOG.md  pyproject.toml  requirements-rag.txt  schedule.md  todo.md
.github/: pull_request_template.md
docs/: agent_tool_design.md  approval_governance.md  automation_rules_runtime.md  automation_runner_design.md  automation_trigger_review_runbook.md  batch19_real_shadow_feedback_plan.md  batch20_post_validator_residual_plan.md  blind50_residual_batch14_plan.md  blind50_residual_post_ds_v11_closure_plan.md  critical_slice_augmentation_plan.md  cultivation_stage_subagents_20260415.md  dashboard_redesign_brief.md  data_curation_rules.md  dataset_taxonomy.md  development_toolchain.md  device_command_mapping_matrix.md  device_operation_rules.md  device_profile_registry.md  device_setpoint_ranges.md  ds_v12_batch22_hard_safety_reinforcement_plan.md  eval_scaleup_plan.md  execution_dispatcher_runtime.md  execution_gateway_command_contract.md  execution_gateway_flow.md  execution_gateway_override_contract.md  expert_knowledge_map.md  extended200_residual_priority_plan.md  farm_case_event_window_builder.md  farm_case_rag_pipeline.md  fine_tuning_objectives.md  fine_tuning_runbook.md  git_workflow.md  glossary.md  grafana_integration_design.md  grodan_delta_gt_master_yield_pest_research_20260415.md  hard_case_oversampling_plan.md  (+52 more)
(+751 files in other folders)
