[project]
name = "pepper-ops"
version = "0.1.0"
description = "Planning and service skeleton repository for pepper smartfarm AI and control system"
requires-python = ">=3.12,<3.13"

[project.optional-dependencies]
plc = ["pymodbus>=3.6,<4"]
training = ["openai>=2.0,<3", "python-dotenv>=1.0,<2"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
